# evm-repricing-cost-analysis

./: .gitignore  Cargo.toml  LICENSE  README.md  glamsterdam-repricing.md
contracts/: foundry.toml
contracts/src/: RepriceProbe.sol
contracts/test/: RepriceProbe.t.sol
crates/gas-schedule/: Cargo.toml
crates/gas-schedule/src/: lib.rs
crates/harness/: Cargo.toml
crates/harness/src/: main.rs
crates/harness/tests/: acceptance.rs
crates/repricer-evm/: Cargo.toml
crates/repricer-evm/src/: fixture.rs  inspector.rs  lib.rs  runner.rs  synthetic.rs
results/: amm-arb-repricing.csv  eip8038-pr11802.md  liquidation-repricing.csv
scripts/: harvest_prestate.py  update_probe_bytecode.py
