[workspace]
members = [
    "crates/gas-schedule",
    "crates/repricer-evm",
    "crates/harness",
]
resolver = "2"

[workspace.dependencies]
gas-schedule  = { path = "crates/gas-schedule" }
repricer-evm  = { path = "crates/repricer-evm" }

revm                   = { version = "40.0.3", default-features = false, features = ["std", "optional_balance_check", "optional_no_base_fee"] }
revm-interpreter       = { version = "37.0.3", default-features = false, features = ["std"] }
revm-handler           = { version = "20.0.3", default-features = false, features = ["std"] }
revm-context           = { version = "18.0.3", default-features = false, features = ["std"] }
revm-context-interface = { version = "19.0.3", default-features = false, features = ["std"] }
revm-inspector         = { version = "21.0.3", default-features = false, features = ["std"] }
revm-primitives        = { version = "24.0.1", default-features = false, features = ["std"] }

serde      = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow     = "1"
clap       = { version = "4", features = ["derive"] }
hex        = "0.4"
